<resources>
    <string name="app_name">BMI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="enter">Enter</string>
    <string name="next">Next</string>
    <string name="enter_your_mass_kg">Enter your mass (kg)</string>
    <string name="enter_your_height_m">Enter your height (m)</string>
    <string name="point">.</string>

    <string name="back">back</string>
</resources>
